--- a/stylesheets/mobile.css
+++ b/stylesheets/mobile.css
@@ -1,12 +1,10 @@
-body
-{
+body {
 	background-color: #CCFFFF;
 	font-family: "Helvetica Neue", sans-serif;
 	margin-left: 10px;
 }
 
-h1
-{
+h1 {
 	padding-left: 10px;
 	padding-top: 10px;
 	padding-bottom: 10px;
@@ -17,40 +15,23 @@ h1
 	font-size: 12px;
 }
 
-h3
-{
+h3 {
 	text-decoration: underline;
 }
 
-a:link
-{
+a:link{
 	color: white;
 	text-decoration: underline;
 }
 
-a:visited 
-{
-	color: white;
-	text-decoration: underline;
-}
-
-a:hover
-{
-	font-size: 16px;
-
-}
-
-div img
-{
+div img {
 	max-width: 75%;
 	max-height: 75%;
-	margin-left: 10px;
+	margin-left: 30px;
 	margin-bottom: 10px;
-	text-align: center;
 }
 
-#navigation
-{
+#navigation {
 	background-color: gray;
 	font-size: 10px;
 	color: white;
@@ -59,26 +40,22 @@ div img
 	padding-left: 10px;
 	margin-left: 10px;
 	margin-right: 20px;
-
 }
 
-#bio
-{
+#bio {
 	text-indent: 10px;
 }
 
-#resume
-{
+#resume {
 	background: white;
-	width: 350px;
+	width: 180px;
 	border: solid 2px gray;
-	margin-left: 40px;
+	margin-left: 10px;
 	padding: 10px;
 	padding-top: 0px;
 	overflow: auto;
 }
 
-a.cclink
-{
+a.cclink {
 	color: gray;
 }
